View Issue Details

IDProjectCategoryView StatusLast Update
0025800Open CASCADEOCCT:Visualizationpublic2015-05-14 15:32
Reporterkgv Assigned Tobugmaster  
PrioritylowSeverityminor 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2013 
Product Version6.8.0 
Target Version6.9.0Fixed in Version6.9.0 
Summary0025800: Visualization, TKOpenGl - disable GL_DITHER explicitly
DescriptionGL_DITHER is enabled by default, but useless nowadays.
Still might affect performance on some OpenGL implementations (e.g. Microsoft software implementation).

http://www.opencascade.org/org/forum/thread_26860/?forum=3

Interactive test case - make sense only on Windows for manual execution:
pload MODELING VISUALIZATION
box b 1 2 3
vcaps -softMode 0
vinit View1
vdisplay b
vfit
vselmode 4 1
Steps To ReproduceN/A
TagsNo tags attached.
Test case numberNot needed

Relationships

related to 0024847 closedapn CLang warnings -Wdeprecated-writable-strings in OpenGl_Display 

Activities

git

2015-02-06 16:38

administrator   ~0037190

Branch CR25800 has been created by kgv.

SHA-1: de96eff1061466f4910b95153e06ab00ed905fd3


Detailed log of new commits:

Author: kgv
Date: Fri Feb 6 16:38:08 2015 +0300

    0025800: Visualization, TKOpenGl - disable GL_DITHER explicitly

kgv

2015-02-06 16:38

developer   ~0037191

Patch is ready for review.

san

2015-02-08 22:35

developer   ~0037203

Branch CR25800 reviewed without remarks, ready for testing.

apv

2015-02-10 12:37

tester   ~0037278

Dear BugMaster,

Branch CR25800 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested.
SHA-1: de96eff1061466f4910b95153e06ab00ed905fd3

Number of compiler warnings:
occt component:
   Linux: 18 (18 on master)
   Windows: 0 (0 on master)
products component :
   Linux: 11 (11 on master)
   Windows: 1 (1 on master)

Regressions/Differences:
Not detected

Testing cases:
Not needed

Testing on Linux:
Total MEMORY difference: 86185453 / 86187735
Total CPU difference: 50308.67999999997 / 47876.709999999846

Testing on Windows:
Total MEMORY difference: 40648616 / 40658608
Total CPU difference: 34929.6875 / 32754.1875

git

2015-03-18 13:38

administrator   ~0038594

Branch CR25800 has been deleted by inv.

SHA-1: de96eff1061466f4910b95153e06ab00ed905fd3

Related Changesets

occt: master 5bd9ed93

2015-02-06 13:38:08

kgv


Committer: bugmaster Details Diff
0025800: Visualization, TKOpenGl - disable GL_DITHER explicitly Affected Issues
0025800
mod - src/OpenGl/OpenGl_Window.cxx Diff File

Issue History

Date Modified Username Field Change
2015-02-06 16:31 kgv New Issue
2015-02-06 16:31 kgv Assigned To => kgv
2015-02-06 16:38 git Note Added: 0037190
2015-02-06 16:38 kgv Note Added: 0037191
2015-02-06 16:38 kgv Assigned To kgv => san
2015-02-06 16:38 kgv Status new => resolved
2015-02-06 16:49 kgv Relationship added related to 0024847
2015-02-06 16:49 kgv Priority normal => low
2015-02-06 18:26 kgv Description Updated
2015-02-08 22:35 san Note Added: 0037203
2015-02-08 22:35 san Assigned To san => bugmaster
2015-02-08 22:35 san Status resolved => reviewed
2015-02-09 11:03 apv Assigned To bugmaster => apv
2015-02-10 11:46 apv Test case number => Not needed
2015-02-10 12:37 apv Note Added: 0037278
2015-02-10 12:37 apv Assigned To apv => bugmaster
2015-02-10 12:37 apv Status reviewed => tested
2015-02-13 17:55 bugmaster Changeset attached => occt master 5bd9ed93
2015-02-13 17:55 bugmaster Status tested => verified
2015-02-13 17:55 bugmaster Resolution open => fixed
2015-03-18 13:38 git Note Added: 0038594
2015-05-14 15:29 aiv Status verified => closed
2015-05-14 15:32 aiv Fixed in Version => 6.9.0