0025800: Visualization, TKOpenGl - disable GL_DITHER explicitly